- fix spacing for ol tags

--- a/assets/sass/base/_typography.sass
+++ b/assets/sass/base/_typography.sass
@@ -44,6 +44,9 @@ h2
 ul
   margin-left: 20px
 
+ol
+  margin-left: 20px
+
 a
   text-decoration: none
   &:visited
